--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,25 +4,47 @@ on:
     push:
         branches:
             - main
-    pull_request:
-        branches:
-            - main
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
+        strategy:
+            matrix:
+                node-version: [22]
+                environment: [MONGO_URI]
 
         steps:
         - name: Checkout code
-            uses: actions/checkout@v2
+          uses: actions/checkout@v3
+          with:
+            node-version: ${{ matrix.node-version }}
 
         - name: Set up Node.js
-            uses: actions/setup-node@v2
-            with:
-                node-version: '14'
+          uses: actions/setup-node@v3
+          with:
+            node-version: ${{ matrix.node-version }}
 
-        - name: Install dependencies
-            run: npm install
+        - name: Install backend dependencies
+          working-directory: ./backend
+          run: |
+            npm install --global yarn
+            yarn --version
+            yarn install
 
-        - name: Run tests
-            run: npm test
+        - name: Install frontend dependencies
+          working-directory: ./frontend
+          run: |
+            df -h
+            sudo rm -rf ./build
+            yarn install
+            yarn build
+
+        - run: npm ci
+
+        - run: |
+            cd ./backend
+            touch .env
+            echo "${{ secrets.PROD }}" > .env
+
+        - run: pm2 start all
+        - run: pm2 restart all
