--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "prod": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bcrypt": "^5.0.1",
     "chai": "^4.5.0",
     "chai-http": "^4.3.0",
