--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,15 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.96",
     "bcrypt": "^5.1.1",
+    "chalk": "4.1.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.13.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
